@@ -3,29 +3,29 @@ abstract: 'Read and write configuration data through Augeas'
 author:
   - 'Dominique Dumont (ddumont at cpan dot org)'
 build_requires:
-  Test::Exception: 0
-  Test::More: 0
-  Test::Warn: 0.11
-  version: 0.77
+  Test::Exception: '0'
+  Test::More: '0'
+  Test::Warn: '0.11'
+  version: '0.77'
 configure_requires:
-  Module::Build: 0.38
+  Module::Build: '0.40'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.133380'
 license: open_source
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Config-Model-Backend-Augeas
 provides:
   Config::Model::Backend::Augeas:
     file: lib/Config/Model/Backend/Augeas.pm
-    version: 0.114
+    version: '0.115'
 requires:
-  Config::Augeas: 0.303
-  Config::Model: 2.034
-  Exception::Class: 0
-  Log::Log4perl: 1.11
-  Mouse: 0
+  Config::Augeas: '0.303'
+  Config::Model: '2.034'
+  Exception::Class: '0'
+  Log::Log4perl: '1.11'
+  Mouse: '0'
 resources:
   license: http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt
-version: 0.114
+version: '0.115'
